# shaft

./: .dockerignore  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
app/: README.md  demo.py  demo_two_stage.py
deploy/: README.md  __init__.py
docs/: README.md  adding_task_domain.md  architecture.md  bug_log.md  codec_and_loss.md  config_reference.md  data_prepare.md  development_log.md  development_workflow.md  eval_bench_architecture.md  eval_bench_frontend_reference_study.md  eval_bench_ui_icon_design.md  export.md  extension_guide.md  handover_20260710_tests_ci.md  infer.md  inference_pipeline.md  module_reference.md  online_eval_design.md  ppo_todo.md  project_skill.md  prompt_profiles.md  scripts.md  standard_data_format.md  testing.md  todo.md  tool_scripts.md  training_batch_planning_design.md  training_pipeline.md  webui.md
scripts/: compare_efficiency.py  convert_stage1_mixed_to_bins1000.py  eval_bench.py  export.py  export_deployment_bundle.py  infer.py  merge_lora.py  train.py  web.py
tests/: conftest.py  test_architecture_boundaries.py  test_batch_planning.py  test_batching_policies.py  test_build_background_sft.py  test_build_context_reconstruction_sft.py  test_build_grounding_layout_sync_structured.py  test_build_grounding_structured.py  test_build_image_reconstruction_sft.py  test_build_point_line_structured.py  test_build_reconstruction_from_gt_standard.py  test_build_region_reconstruction_sft.py  test_build_sft_from_structured.py  test_checkpoint_layout_migration.py  test_checkpoint_loading.py  test_checkpointing.py  test_cli_commands.py  test_cli_common.py  test_codec.py  test_collator.py  test_config_catalog.py  test_config_deepspeed.py  test_config_eval_datasets.py  test_config_examples.py  test_config_freeze.py  test_config_loader.py  test_config_online_eval.py  test_config_online_eval_best_metric.py  test_config_online_eval_validation.py  test_config_prompt_sampling.py  test_config_rlhf.py  (+90 more)
(+771 files in other folders)
