[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shaft"
version = "0.1.0"
description = "Shaft: a pragmatic multimodal SFT/RL backbone framework."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
dependencies = [
  "cairosvg>=2.8",
  "numpy>=1.26",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "safetensors>=0.5.0",
  "torch>=2.3",
  "torchvision>=0.18",
  "tqdm>=4.66",
  "transformers==4.57.6",
  "peft>=0.14.0",
  "wandb>=0.19.0",
  "fastapi>=0.116.0",
  "jinja2>=3.1.6",
  "openai>=2.30.0",
  "matplotlib>=3.10.8",
  "modelscope>=1.35.3",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "ruff>=0.9.0",
  "pytest>=8.0.0",
]
train = [
  "accelerate>=1.7.0",
  "datasets>=3.0.0",
]
gpu = [
  "bitsandbytes>=0.46.1",
]
gpu-kernels = [
  "flash-attn==2.8.3",
]
rlhf = [
  "trl>=0.19.0,<1.0.0",
  "accelerate>=1.7.0",
  "datasets>=3.0.0",
]
serve = [
  "vllm==0.19.0; sys_platform == 'linux'",
]
distributed = [
  "deepspeed>=0.16.0; sys_platform == 'linux'",
  "ninja>=1.11.0; sys_platform == 'linux'",
]
eval-bench = [
  "aiosqlite>=0.20.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q -m 'not integration and not manual'"
pythonpath = ["projects/eval_bench"]
norecursedirs = [
  "old",
  "temp",
  "build",
  "outputs",
  "wandb",
  "rex-omni-test",
]
markers = [
  "integration: marks tests that run integration workflow (model loading / real inference).",
  "manual: marks tests that should be executed manually only.",
]
